<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SecondApplication</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="toppings">TOPPINGS</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="your_email">Your Email</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="added_chocolate">With Chocolate: True</string>
    <string name="no_added_chocolate">With Chocolate: False</string>
    <string name="added_whipped_cream">With Whipped Cream: True</string>
    <string name="no_added_whipped_crean">With Whipped Cream: False</string>
    <string name="thank_you_note">Thank you for shopping with us!</string>
    <string name="billing_note">Your bill is: $ <xliff:g id="bill" example="50">%s</xliff:g></string>
    <string name="subject">Coffee ordered successfully</string>
</resources>